--- a/styles/style.css
+++ b/styles/style.css
@@ -19,3 +19,96 @@
   font-weight: 400;
   font-style: normal;
 }
+/* ----------------------------------------------------------------------------- */
+/* shared style------------------------------ */
+.btn{ 
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 24px;
+  border-radius: 41px;
+  background: rgb(224, 44, 109);
+  border: none;
+  padding: 10px 40px 10px 24px;
+}
+/* __________________________________1ST PART__________________________________ */
+/* nav style------------------------------------- */
+header{
+  width: 1340px;
+  height: 700px;
+  margin: 0 auto;
+  /* border: 2px solid blue; */
+}
+nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+} 
+nav ul li{
+  list-style: none; 
+}
+nav ul a{
+  text-decoration: none;
+  margin-right: 15px;
+  color: rgb(58, 58, 58);
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 24px;
+  margin-top: 40px;
+}
+nav ul i{
+  margin-right: 15px;
+}
+nav ul{
+  display: flex;
+}
+.nav-title{ 
+  color: rgb(58, 58, 58);
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 36px;
+  margin-top: 40px;
+}
+.nav-hamburger{
+  display: none;
+}
+/* banner style-------------------------------------------- */
+.banner-content{
+  display: flex;
+}
+.banner-content .banner-text{
+  max-width:582px;
+  height:370px ;
+  margin-top: 145px;
+  /* border: 2px solid pink; */
+}
+.banner-content .banner-text .banner-title{ 
+  color: rgb(58, 58, 58);
+  font-size: 3.2rem;
+  font-weight: 700;
+}
+.banner-content .banner-text .banner-description{
+   color: rgb(58, 58, 58);
+  font-size: 1rem;
+  font-weight: 600;
+  margin-top: 0px;
+}
+.banner-content .img{
+  background-image: url(../images/Circle\ design.svg);
+  width:475px ;
+  height:475px ;
+  border: 2px dashed gray;
+  margin-left: 300px;
+  margin-top: 20px;
+}
+.banner-content .img .banner-img{
+  width:440px ;
+  height:414px;
+  margin:30px 33px 31px 2px;
+  border: 2px dashed gray; ;
+}
+.btn .btn-text{
+  margin-right: 15px;
+}
+
+/* ______________________________________2ND PART_______________________________ */
