--- a/styles/style.css
+++ b/styles/style.css
@@ -126,7 +126,7 @@ nav ul{
 hr{
   color:rgba(192, 204, 218, 0.10) ;
 }
-/*________________________________3RD PART_______________________________________ */
+/*__________________________________3RD PART_______________________________________ */
 /* popular collection style------------------------------- */
 .popular-collection{
   width:1047px ;
@@ -141,7 +141,7 @@ hr{
   font-size: 28px;
   font-weight: 600;
   text-align: center;
-  margin-bottom:30px: ;
+  margin-bottom:30px;
 }
 .popular-collection .gallery{
   display: grid;
@@ -165,3 +165,53 @@ hr{
 .gallery .card .popular-description{
   margin-left: 10px;
 }
+.popular-collection .see-more{ 
+  color: rgba(224, 44, 109, 0.87);
+  font-family: Poppins;
+  font-size: 1rem;
+  font-weight: 700;
+  text-align: right;
+}
+
+/* _________________________________________4TH PART_____________________________________ */
+/*featured-product style-----------------------------  */
+.featured-product{
+  width:1110px ;
+  height:270px ;
+  margin: 0 auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  /* border: 2px solid blue; */
+  display: flex;
+}
+.featured-product .featured-text{
+  width: 610px;
+  height:224px ;
+  /* border: 2px solid pink; */
+  margin-left:96px ;
+  margin-top: 23px;
+}
+.featured-product .featured-title{
+  color: rgb(10, 8, 38);
+  font-family: Poppins;
+  font-size: 30px;
+  font-weight: 700;
+}
+.featured-product .featured-description{ 
+  color: rgb(108, 108, 108);
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 700;
+  margin-top: 16px;
+}
+.featured-product .featured-btn{ 
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 24px;
+  background: rgb(224, 44, 109);
+  border: none;
+  padding: 10px 40px 10px 24px; 
+}
+
+
